- Made relation editors show full path to the content / sitenode
- Made SiteNodeVO contain parentSiteNodeId
- Made default expiration date 50 year ahead
- Changed page icon in structure tree - made more sense - the old one was the same as for content folder.
- Added nullcheck in ViewContentVersion - problem could otherwise arise when clicking on a text to edit in a language not yet existing

-------------------------------------------------------------------------------------
- InfoGlue 2.3 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
The InfoGlue Team is very pleased to finally announce version 2.3 of the InfoGlue CMS and Portal platform.
This release contains many important improvement of the 2.1 release and the platform has matured a lot since then.
Among the new features are a lot of new user features which makes you much more efficient. This along with a big effort on
system management and maintainability as well as on performance makes it worth the wait. We have also made some neat additions 
which let's you expose some editing and user preferences to non-cms-users if you like. Very nice for intranets and community sites. 

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.1 Final 
---------------------------------------

New features
- Added taglib to get principal properties
- Fixed so structure tree can represent if a page is hidden
- Added new taglib parameters to hide protected childpages
- Added new taglibs which lets you have visible links to content wizard and assgn content
- Enabled a new feature called "content wizard" which lets you crate contents from a component property or from a link on the page.
- Fixed functionality to push system messages through ajax
- A new feature makes it possible to unpublish all versions of a content or a sitenode. Recursively.