@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="script/infogluecommons.js"></script>
 	
 	<script language="JavaScript"> 
-		window.resizeTo(800,600);
+		window.resizeTo(800,600);		
 	</script> 
 		
 	<script type="text/javascript" language="JavaScript">
@@ -63,6 +63,17 @@
 		   	propertiesXML += "</properties>";
 
 			return propertiesXML;
+		}
+
+		/**
+		 * This submits the component properties XML and closes.
+		 */
+		 
+		function submitPropertiesXMLAndExit()
+		{
+			document.inputForm.closeOnLoad.value = "true";
+
+			submitPropertiesXML();
 		}
 		
 		/**
@@ -244,7 +255,7 @@
 			drawOptionList();
 		}
 
-		
+
 		function updateProperties()
 		{
 			//alert("Updating property");
@@ -650,11 +661,21 @@
 		
 		var propertyVector = new Vector(0);
 	
+		function refreshCaller()
+		{
+			if(window.opener && window.opener.parent && window.opener.parent.frames['main'])
+				window.opener.parent.frames['main'].location.reload();
+			else
+				window.opener.location.reload();	
+			
+			window.close();
+		}
+		
 	</script>
 	
 </head>
 
-<body class="contenttooledit" onload="javascript:init();">
+<body class="contenttooledit" onload="#if($closeOnLoad == "true") refreshCaller(); #else init(); #end">
 
 <div id="savingLayer" class="infobackground">
 	<div class="infoheader">Saving changes</div>
@@ -723,7 +744,7 @@
  	</select>
 </p>
 <p>
-	<a href="javascript:updateProperties();"><img src="$ui.getString("images.managementtool.buttons.saveAndExit")" width="80" height="25" border="0"></a>
+	<a href="javascript:updateProperties();"><img src="$ui.getString("images.managementtool.buttons.save")" width="50" height="25" border="0"></a>
 	<a href="javascript:hideDiv('componentPropertyDefinition');"><img src="$ui.getString("images.managementtool.buttons.cancel")" width="50" height="25" border="0"></a>
 </p>
 </form>
@@ -799,7 +820,8 @@
 		
 		<tr>
 			<td>
-				<a href="javascript:submitPropertiesXML();"><img src="$ui.getString("images.contenttool.buttons.saveAndExit")" border="0"></a>
+				<a href="javascript:submitPropertiesXML();"><img src="$ui.getString("images.contenttool.buttons.save")" border="0"></a>
+				<a href="javascript:submitPropertiesXMLAndExit();"><img src="$ui.getString("images.contenttool.buttons.saveAndExit")" border="0"></a>
 				<a href="javascript:window.opener.location.reload();window.close();"><img src="$ui.getString("images.contenttool.buttons.cancel")" width="50" height="25" border="0"></a>
 			</td>
 		</tr>		
@@ -810,6 +832,7 @@
 			<input type="hidden" name="contentVersionId" value="$contentVersionId">
 			<input type="hidden" name="attributeName" value="$attributeName">
 			<input type="hidden" name="propertiesXML" value="">
+			<input type="hidden" name="closeOnLoad" value="false">
 		</form>
 
 	</td>
