@@ -45,6 +45,7 @@ Abbreviated Changelog from 2.3 Final
 - Made default expiration date 50 year ahead
 - Changed page icon in structure tree - made more sense - the old one was the same as for content folder.
 - Added nullcheck in ViewContentVersion - problem could otherwise arise when clicking on a text to edit in a language not yet existing
+- Fixed some issues with property editors buttons and also made property window nicer
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.3 Final
